@startuml

hide circle
skinparam linetype ortho

entity ORG_UNIT {
    * id: int <<generated>>
    --
    * name: varchar(255)
}

entity TEAM {
    * id: int <<generated>>
    --
    * org_unit_id: int
    * name: varchar(255)
}

entity MEMBER {
    * id: int <<generated>>
    --
    * team_id: int
    * name: varchar(255)
    * title: varchar(255)
      avatar: varchar(1024)
}

entity STATUS_LOG {
    * status_date: date
    * member_id: int
    --
    prev_period_log: varchar(1024)
    current_period_log: varchar(1024)
    blockers: varchar(1024)
}

ORG_UNIT ||..|{ TEAM
TEAM ||..|{ MEMBER
MEMBER ||..right..|{ STATUS_LOG
@enduml